updated snack biking

--- a/_posts/2015-10-24-classic.md
+++ b/_posts/2015-10-24-classic.md
@@ -19,4 +19,16 @@ This was the first snack biking trip!
 - total length: 20 miles
 - elevation: 728 ft
 
+## Thoughts
+
+### Kiran
+
+This is one of my favorite rides! It's also the first snack biking ride the three of us did together. It's a quick and easy trip out to really good dumplings (I like the spicy wontons and the soup dumplings), down to the beach, and over to the best ice cream in the city. Mr and Mrs Miscellaneous always has weird flavors, and they rotate through them quickly, and they're all really good.
+
+There's one hill in Golden Gate Park, coming back from the beach, that's a little prolonged and irritating, but it's totally doable, even on a single speed. The waterfall (after the bison paddock) is the peak height.
+
+### Harold
+
+Get the pea shoots at the dumpling place.
+
 <iframe src="https://www.google.com/maps/embed?pb=!1m46!1m12!1m3!1d50463.84699372177!2d-122.48418710243661!3d37.76682241868664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m31!3e1!4m5!1s0x808f7e1779aa70a7%3A0xa618e4eff1228d60!2sMission+Dolores+Park!3m2!1d37.7597727!2d-122.42706299999999!4m5!1s0x808587a7b219874b%3A0xe2cb6c3be582ec23!2sShanghai+Dumpling+King!3m2!1d37.7756775!2d-122.4945139!4m5!1s0x8085879469edc663%3A0x8a1e788f0b2d67fc!2sOcean+Beach%2C+San+Francisco%2C+CA!3m2!1d37.7593921!2d-122.510734!4m5!1s0x808f7fb989befdff%3A0xcc2ad8c98a4d2f7b!2sMr.+and+Mrs.+Miscellaneous!3m2!1d37.757793299999996!2d-122.3880446!4m5!1s0x808f7e1779aa70a7%3A0xa618e4eff1228d60!2sMission+Dolores+Park!3m2!1d37.7597727!2d-122.42706299999999!5e0!3m2!1sen!2sus!4v1460013334918" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
